Bug #12220 Node recovery and charsets
Submitted: 27 Jul 2005 20:02 Modified: 25 Aug 2005 12:31
Reporter: Jonathan Miller
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:5.0, 5.1 OS:Linux (Linux)
Assigned to: Jonas Oreland Target Version:

[27 Jul 2005 20:02] Jonathan Miller
Description:
Assigned to me to look at after vacation and try to reproduce.

After cluster restart trying to clean out the trans table, I get:

mysql> use TPCB
Reading table information for completion of table and column names
You can turn off this feature to get a quicker startup with -A

Database changed
mysql> delete from trans;
ERROR 1032 (HY000): Can't find record in 'trans'
mysql> show tables;
+----------------+
| Tables_in_TPCB |
+----------------+
| account        |
| branch         |
| history        |
| teller         |
| trans          |
+----------------+
5 rows in set (0.01 sec)

mysql> delete from trans;
ERROR 1032 (HY000): Can't find record in 'trans'
mysql> select * from trans;
+----------+-------+---------+---------------------+---------------------+
| scriptId | count | tps     | lastTransTime       | startTime           |
+----------+-------+---------+---------------------+---------------------+
| ndb09_1  | 25211 | 35.7096 | 2005-07-27 19:19:17 | 2005-07-27 19:07:31 |
+----------+-------+---------+---------------------+---------------------+
1 row in set (0.04 sec)

mysql> delete from trans;
ERROR 1032 (HY000): Can't find record in 'trans'
mysql> delete from trans where scriptId = 'ndb09_1';
Query OK, 0 rows affected (0.04 sec)

mysql>
mysql> create table t1(c1 int, PRIMARY KEY(c1))engine=ndb;
Query OK, 0 rows affected (0.62 sec)

mysql> insert into t1 values (1),(2);
Query OK, 2 rows affected (0.00 sec)
Records: 2  Duplicates: 0  Warnings: 0

mysql> delete from t1;
Query OK, 2 rows affected (0.04 sec)

mysql> drop table t1;
Query OK, 0 rows affected (0.45 sec)

mysql>

How to repeat:
I had made a time dead lock check setting and wanted to get it into the cluster
populate the TPCB.trans table with at least on record
ndb_mgm -e "1 stop" -> stop the ndb_mgmd process 
ndb_mgmd -f config.ini -> start the ndb_mgmd process with new setting
ndb_mgm -e "4 restart" -> restart the ndbd processes ( 4 - 9) for this setup
try to delete from trans.
[13 Aug 2005 7:58] Jonas Oreland
What's the schema for trans?
(I think I know what this is...)
[22 Aug 2005 10:59] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/28597
[22 Aug 2005 11:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/28598
[22 Aug 2005 20:51] Jonas Oreland
Pushed into 5.0.12
[25 Aug 2005 12:31] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.0.12 changelog. Closed.