bug#12220 - ndb - node recovery with charsets   LQH computes incorrect hash values during NR (as it doesn't concider charsets)

Solution: make LQH compute correct hash :-)
           1) move xfrm_key into SimulatedBlock so that there's _one_ impl.
           2) make TC, ACC, LQH use same impl.