ndb/src/kernel/blocks/dbtc/Dbtc.hpp
@@ -962,11 +962,6 @@ public:
     Uint8 hasCharAttr;
     Uint8 noOfDistrKeys;
     
-    struct KeyAttr {
-      Uint32 attributeDescriptor;
-      CHARSET_INFO* charsetInfo;
-    } keyAttr[MAX_ATTRIBUTES_IN_INDEX];
-
     bool checkTable(Uint32 schemaVersion) const {
       return enabled && !dropping && 
 	(table_version_major(schemaVersion) == table_version_major(currentSchemaVersion));
